# pipelines-as-code

./: .codecov.yaml  .errcheck.txt  .gitignore  .golangci.yml  .goreleaser.yml  .ko.yaml  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  .shellcheckrc  .vale.ini  .yamllint  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  GEMINI.md  INSTALL.md  Makefile  OWNERS  README.md  TODO.md  TODO.org  best_practices.md  code-of-conduct.md  go.mod  go.sum  release-0.1.yaml  release-0.2.yaml  release-0.3.k8s.yaml  release-0.3.yaml  release-0.4.1.k8s.yaml  release-0.4.1.yaml  release-0.4.2.k8s.yaml  release-0.4.2.yaml  release-0.4.3.k8s.yaml  release-0.4.3.yaml  release-0.4.4.k8s.yaml  release-0.4.4.yaml  release-0.5.0.k8s.yaml  (+15 more)
.github/: dependabot.yaml  pull_request_template.md
.konflux/: README.md
.tekton/: boussole.yaml  doc.yaml  docker-build-ta.yaml  e2e-label.yaml  e2e-tests.yaml  generate-coverage-release.yaml  go.yaml  issue-create.yaml  jira.yaml  linter.yaml  pac-downstream-main-controller-pull-request.yaml  pac-downstream-main-controller-push.yaml  pac-downstream-main-watcher-pull-request.yaml  pac-downstream-main-watcher-push.yaml  pac-downstream-main-webhook-pull-request.yaml  pac-downstream-main-webhook-push.yaml  pipeline.yaml  pipelines-as-code-main-controller-pull-request.yaml  pr-ci.yaml  pr-labeler.yaml  (+13 more)
hack/pr-ci/: README.md  comments.py  config.py  gemini.py  github.py  jira.py  linter.py  main.py  pr_data.py  pyproject.toml
hack/pr-ci/src/pr_ci/: comments.py  config.py  gemini.py  github.py  jira.py  linter.py  main.py  pr_data.py  utils.py
(+1554 files in other folders)
